Add local speech recognizer option. Recognition accuracy is horrible.

--- a/Translator/NeosTextTranslator/NeosTextTranslator.csproj
+++ b/Translator/NeosTextTranslator/NeosTextTranslator.csproj
@@ -60,6 +60,7 @@
       <HintPath>..\packages\System.Collections.Immutable.1.4.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Speech" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContinuousTranslator.cs" />
+    <Compile Include="LocalSpeechRecognizer.cs" />
     <Compile Include="NeosTranslateDataModel.cs" />
     <Compile Include="NeosTranslateHttpListener.cs" />
     <Compile Include="Program.cs" />
